// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  className="sc-bdVaJa iJQmjv"
  onSubmit={[Function]}
>
  <SearchInput
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your city name"
    value=""
  />
</form>
`;

exports[`renders correctly when no matches got found 1`] = `
<form
  className="sc-bdVaJa iJQmjv"
  onSubmit={[Function]}
>
  <SearchInput
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your city name"
    value=""
  />
  <div
    className="sc-bZQynM cgWLaR sc-EHOje kbodPI"
    onMouseDown={[Function]}
  >
    No cities found
  </div>
</form>
`;

exports[`renders correctly when some cities got found 1`] = `
<form
  className="sc-bdVaJa iJQmjv"
  onSubmit={[Function]}
>
  <SearchInput
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your city name"
    value=""
  />
  <ul
    className="sc-bwzfXH ctBVmg"
  >
    <li
      className="sc-htpNat hQCJrQ"
      onMouseDown={[Function]}
    >
      <p
        className="sc-ifAKCX bnWgmO"
      >
        London
         
        <span
          className="sc-bxivhb bQvplE"
        >
          US
        </span>
      </p>
    </li>
    <li
      className="sc-htpNat hQCJrQ"
      onMouseDown={[Function]}
    >
      <p
        className="sc-ifAKCX bnWgmO"
      >
        London
         
        <span
          className="sc-bxivhb bQvplE"
        >
          GB
        </span>
      </p>
    </li>
  </ul>
</form>
`;
